fix: Added media query so text on Our Services aligns left on large devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,9 @@
 /* Google fonts import */
+
 @import url('https://fonts.googleapis.com/css2?family=Exo:ital,wght@0,100..900;1,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
 
-/* Fonts (credit: Google Fonts - https://fonts.google.com/ */
-
 /* CSS Variables */
+
 :root {
     --primary-font: "Nunito", sans-serif;
     --secondary-font: "Exo", serif;
@@ -18,6 +18,7 @@
 }
 
 /* Global styles */
+
 body {
     font-family: var(--primary-font);
     padding-top: 40px; /* top of header pushed down making it visible under fixed navbar */
@@ -41,6 +42,7 @@ h2 {
 }
 
 /* Navbar */
+
 #navbar {
     background-color: white;
     font-family: var(--secondary-font);
@@ -66,6 +68,7 @@ h2 {
 }
 
 /* Header */
+
 #header {
     padding-bottom: 2rem;
 }
@@ -77,6 +80,7 @@ h2 {
 
 
 /* About section */
+
 #about {
     background-color: var(--secondary-color);
     margin: 0;
@@ -95,6 +99,7 @@ p {
 }
 
 /* Brief service section on Home page */
+
 #brief-services .card {
     border: none;
     min-height: auto;
@@ -110,6 +115,10 @@ p {
 }
 
 /* Our services page */
+#list-of-services {
+    padding-bottom: 2rem;
+}
+
 #list-of-services p {
     color: var(--primary-color);
 }
@@ -125,7 +134,9 @@ hr {
 }
 
 /* Footer section */
+
 /*Contact section */
+
 #contact {
     background-color: var(--secondary-color);
     color: white;
@@ -153,8 +164,19 @@ hr {
 }
 
 /* Copyright section */
+
 #copyright p{
     color: var(--highlight-color);
     font-size: 10px;
     margin: 0 0 10px
+}
+
+/* Media queries */
+
+/* Large devices (small laptops, 992px and up) */
+@media screen and (min-width: 992px) {
+    /* Make all service cards the same height for consistency */
+    #list-of-services .col-lg-8 {
+        text-align: left;
+    }
 }
